--- a/views/AdminLTE-2.4.3/pages/custom/edit_about.html
+++ b/views/AdminLTE-2.4.3/pages/custom/edit_about.html
@@ -92,7 +92,18 @@
             <li><a href="admin.php?view=edit_news"><i class="fa fa-circle-o"></i>Edit</a></li>
           </ul>
         </li>
-        <li class="active"><a href="admin.php?view=edit_about"><i class="fa fa-table"></i> <span>Edit about us</span></a></li>
+        <li class="treeview">
+          <a href="#"><i class="fa fa-group"></i> <span>Add/edit Team Members</span>
+            <span class="pull-right-container">
+              <i class="fa fa-angle-left pull-right"></i>
+            </span>
+          </a>
+          <ul class="treeview-menu">
+            <li><a href="admin.php?view=add_member"><i class="fa fa-circle-o"></i>Add</a></li>
+            <li><a href="admin.php?view=edit_member"><i class="fa fa-circle-o"></i>Edit</a></li>
+          </ul>
+        </li>
+        <li class="active"><a href="admin.php?view=edit_about"><i class="fa fa-group"></i> <span>Edit about us</span></a></li>
       </ul>
       <!-- /.sidebar-menu -->
     </section>
@@ -163,7 +174,7 @@
 
 <script src="views/AdminLTE-2.4.3/bower_components/ckeditor/ckeditor.js"></script>
 
-<script src="views/AdminLTE-2.4.3/dist/js/push.js"></script>
+<script src="js/push.js"></script>
 
 <script>
   $(function () {
