--- a/views/index.html
+++ b/views/index.html
@@ -341,7 +341,8 @@
 <script type="text/javascript" src="views/assets/plugins/jquery-3.2.1.min.js"></script>
 <!-- <script type="text/javascript" src="views/assets/plugins/bootstrap/js/bootstrap.min.js"></script> -->
 <script type="text/javascript" src="views/assets/js/main.js"></script>
-<script type="text/javascript" src="views/assets/js/request.js"></script>
+<!-- <script type="text/javascript" src="js/request.js"></script> -->
+<script type="text/javascript" src="js/link.js"></script>
 
 </body>
 </html>
