--- a/views/AdminLTE-2.4.3/pages/custom/add_member.html
+++ b/views/AdminLTE-2.4.3/pages/custom/add_member.html
@@ -1,12 +1,3 @@
-<?php
-if (session_status() == PHP_SESSION_NONE) {
-    session_start();
-}
-
-if(!isset($_SESSION['id11']))
-	header('Location: index.php');
-?>
-
 <!DOCTYPE html>
 <html>
 <head>
@@ -22,7 +13,9 @@ if(!isset($_SESSION['id11']))
   <link rel="stylesheet" href="views/AdminLTE-2.4.3/bower_components/Ionicons/css/ionicons.min.css">
   <!-- Theme style -->
   <link rel="stylesheet" href="views/AdminLTE-2.4.3/dist/css/AdminLTE.min.css">
-
+  <!-- AdminLTE Skins. We have chosen the skin-blue for this starter
+        page. However, you can choose any other skin. Make sure you
+        apply the skin class to the body tag so the changes take effect. -->
   <link rel="stylesheet" href="views/AdminLTE-2.4.3/dist/css/skins/skin-purple.min.css">
 
   <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
@@ -59,11 +52,14 @@ if(!isset($_SESSION['id11']))
       </a>
       <!-- Navbar Right Menu -->
       <div class="navbar-custom-menu">
+        <ul class="nav navbar-nav">
+
+          <li>
             <form action="index.php">
               <button type="submit" name="logout" value="1" class="btn bg-purple btn-flat margin">Logout <i class="fa fa-sign-out"></i></button>
             </form>
-          <!-- </li> -->
-        <!-- </ul> -->
+          </li>
+        </ul>
       </div>
     </nav>
   </header>
@@ -96,14 +92,14 @@ if(!isset($_SESSION['id11']))
             <li><a href="admin.php?view=edit_news"><i class="fa fa-circle-o"></i>Edit</a></li>
           </ul>
         </li>
-        <li class="treeview">
+        <li class="treeview active">
           <a href="#"><i class="fa fa-group"></i> <span>Add/edit Team Members</span>
             <span class="pull-right-container">
               <i class="fa fa-angle-left pull-right"></i>
             </span>
           </a>
           <ul class="treeview-menu">
-            <li><a href="admin.php?view=add_member"><i class="fa fa-circle-o"></i>Add</a></li>
+            <li class="active"><a href="admin.php?view=add_member"><i class="fa fa-circle-o"></i>Add</a></li>
             <li><a href="admin.php?view=edit_member"><i class="fa fa-circle-o"></i>Edit</a></li>
           </ul>
         </li>
@@ -118,12 +114,56 @@ if(!isset($_SESSION['id11']))
   <div class="content-wrapper">
     <!-- Content Header (Page header) -->
     <section class="content-header">
-
+      <h1>
+        Add/Edit News
+      </h1>
 
     </section>
 
     <!-- Main content -->
     <section class="content container-fluid">
+
+      <div class="box box-primary">
+        <div class="box-header with-border">
+          <h3 class="box-title">Add news</h3>
+        </div>
+
+        <form class="form-add" role="form" method="post" action="loader.php?a=ProjectsController.Projects.createProject">
+          <div class="box-body">
+
+            <div class="form-group">
+              <label for="titleInput">Title</label>
+              <input type="text" name="name" class="form-control" id="titleInput" placeholder="title ...">
+            </div>
+
+            <div class="form-group">
+              <label for="imgInput">Cover image</label>
+              <input type="file" name="img" id="imgInput">
+              <p class="help-block">only 4:3 resolution images</p>
+            </div>
+
+            <div class="form-group">
+              <label for="descriptionInput">Status</label>
+              <input type="text" name="desc" class="form-control" id="descriptionInput" placeholder="short description ...">
+            </div>
+
+            <div class="form-group">
+              <label for="editor1">Description</label>
+              <textarea name="full_desc" id="editor1" rows="10" cols="80"></textarea>
+            </div>
+
+            <div class="radio">
+              <label class="hidden"><input type="radio" name="status" value="2" checked></label>
+            </div>
+
+            <div class="callout callout-danger error-box" style="display:none"></div>
+            <div class="callout callout-success success-box" style="display:none"></div>
+          </div>
+          <div class="box-footer">
+            <button type="submit" class="btn btn-primary">Submit</button>
+          </div>
+        </form>
+      </div>
 
 
     </section>
@@ -146,6 +186,16 @@ if(!isset($_SESSION['id11']))
 <script src="views/AdminLTE-2.4.3/bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
 <!-- AdminLTE App -->
 <script src="views/AdminLTE-2.4.3/dist/js/adminlte.min.js"></script>
+
+<script src="views/AdminLTE-2.4.3/bower_components/ckeditor/ckeditor.js"></script>
+
+<script src="js/push.js"></script>
+
+<script>
+  $(function () {
+    CKEDITOR.replace('editor1')
+  })
+</script>
 
 </body>
 </html>
