--- a/views/login.html
+++ b/views/login.html
@@ -66,7 +66,7 @@
 <!-- Bootstrap 3.3.7 -->
 <script src="views/AdminLTE-2.4.3/bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
 
-<script src="views/assets/js/link.js"></script>
+<script src="js/auth.js"></script>
 
 </body>
 </html>
