--- a/views/AdminLTE-2.4.3/pages/custom/edit_about.html
+++ b/views/AdminLTE-2.4.3/pages/custom/edit_about.html
@@ -104,6 +104,7 @@
           </ul>
         </li>
         <li class="active"><a href="admin.php?view=edit_about"><i class="fa fa-group"></i> <span>Edit about us</span></a></li>
+        <li><a href="admin.php?view=change_pass"><i class="fa fa-key"></i> <span>Change Password</span></a></li>
       </ul>
       <!-- /.sidebar-menu -->
     </section>
