--- a/views/AdminLTE-2.4.3/pages/custom/add_member.html
+++ b/views/AdminLTE-2.4.3/pages/custom/add_member.html
@@ -104,6 +104,7 @@
           </ul>
         </li>
         <li><a href="admin.php?view=edit_about"><i class="fa fa-group"></i> <span>Edit about us</span></a></li>
+        <li><a href="admin.php?view=change_pass"><i class="fa fa-key"></i> <span>Change Password</span></a></li>
       </ul>
       <!-- /.sidebar-menu -->
     </section>
@@ -128,11 +129,11 @@
           <h3 class="box-title">Add news</h3>
         </div>
 
-        <form class="form-add" role="form" method="post" action="loader.php?a=ProjectsController.Projects.createProject">
+        <form class="form-add" role="form" method="post" action="loader.php?a=AdminController.Admin.addTeamMember">
           <div class="box-body">
 
             <div class="form-group">
-              <label for="titleInput">Title</label>
+              <label for="titleInput">Name</label>
               <input type="text" name="name" class="form-control" id="titleInput" placeholder="title ...">
             </div>
 
@@ -150,10 +151,6 @@
             <div class="form-group">
               <label for="editor1">Description</label>
               <textarea name="full_desc" id="editor1" rows="10" cols="80"></textarea>
-            </div>
-
-            <div class="radio">
-              <label class="hidden"><input type="radio" name="status" value="2" checked></label>
             </div>
 
             <div class="callout callout-danger error-box" style="display:none"></div>
