--- a/views/AdminLTE-2.4.3/pages/custom/edit_news.html
+++ b/views/AdminLTE-2.4.3/pages/custom/edit_news.html
@@ -102,6 +102,7 @@
           </ul>
         </li>
         <li><a href="admin.php?view=edit_about"><i class="fa fa-group"></i> <span>Edit about us</span></a></li>
+        <li><a href="admin.php?view=change_pass"><i class="fa fa-key"></i> <span>Change Password</span></a></li>
       </ul>
       <!-- /.sidebar-menu -->
     </section>
@@ -181,7 +182,7 @@
   <!-- ========== main img === -->
             <div class="form-group">
               <label for="editor1">Description</label>
-              <textarea name="full_desc" id="editor1" rows="10" cols="80"></textarea>
+              <textarea name="desc" id="editor1" rows="10" cols="80"></textarea>
             </div>
             <div class="radio">
               <label class="hidden"><input type="radio" name="status" value="2" checked></label>
