--- a/views/AdminLTE-2.4.3/starter.html
+++ b/views/AdminLTE-2.4.3/starter.html
@@ -108,6 +108,7 @@ if(!isset($_SESSION['id11']))
           </ul>
         </li>
         <li><a href="admin.php?view=edit_about"><i class="fa fa-group"></i> <span>Edit about us</span></a></li>
+        <li><a href="admin.php?view=change_pass"><i class="fa fa-key"></i> <span>Change Password</span></a></li>
       </ul>
       <!-- /.sidebar-menu -->
     </section>
