--- a/views/index.html
+++ b/views/index.html
@@ -157,44 +157,6 @@
       </div>
 
         <div class="row" id="tProjects" style="margin-top: -10px;">
-
-
-          <!-- <div class="col-xs-6 col-md-4 project_block">
-            <img src="views/assets/img/upload/projects/img_1.jpg" class="img-responsive">
-            <h3 class="centered">აბლაბუდა</h3>
-          </div>
-          <div class="col-xs-6 col-md-4 project_block">
-            <img src="views/assets/img/upload/projects/img_2.jpg" class="img-responsive">
-            <h3 class="centered">აბლაბუდა</h3>
-          </div>
-          <div class="col-xs-6 col-md-4 project_block">
-            <img src="views/assets/img/upload/projects/img_3.jpg" class="img-responsive">
-            <h3 class="centered">აბლაბუდა</h3>
-          </div>
-          <div class="col-xs-6 col-md-4 project_block">
-            <img src="views/assets/img/upload/projects/img_4.jpg" class="img-responsive">
-            <h3 class="centered">აბლაბუდა</h3>
-          </div>
-          <div class="col-xs-6 col-md-4 project_block">
-            <img src="views/assets/img/upload/projects/img_5.jpg" class="img-responsive">
-            <h3 class="centered">აბლაბუდა</h3>
-          </div>
-          <div class="col-xs-6 col-md-4 project_block">
-            <img src="views/assets/img/upload/projects/img_6.jpg" class="img-responsive">
-            <h3 class="centered">აბლაბუდა</h3>
-          </div>
-          <div class="col-xs-6 col-md-4 project_block">
-            <img src="views/assets/img/upload/projects/img_7.jpg" class="img-responsive">
-            <h3 class="centered">აბლაბუდა</h3>
-          </div>
-          <div class="col-xs-6 col-md-4 project_block" id="more_projects">
-            <h3>ყველა პროექტის ნახვა</h3>
-            <div class="arrow arrow_bg"></div>
-          </div>
-          <div class="col-xs-6 col-md-4 project_block">
-            <img src="views/assets/img/upload/projects/img_8.jpg" class="img-responsive">
-            <h3 class="centered">აბლაბუდა</h3>
-          </div> -->
         </div>
 
       <div class="separator black"></div>
@@ -260,10 +222,11 @@
           </div> -->
       </div>
 
-      <div class="separator">
-        <h2>ყველა სიახლე</h2>
+      <div class="separator" id="moreNews">
+        <h2>იხილეთ მეტი</h2>
         <div class="arrow arrow_md"></div>
       </div>
+
     </section>
     <section id="contact">
       <div class="separator black">
