--- a/views/AdminLTE-2.4.3/pages/custom/edit_about.html
+++ b/views/AdminLTE-2.4.3/pages/custom/edit_about.html
@@ -129,17 +129,12 @@
           <h3 class="box-title">Edit about us</h3>
         </div>
 
-        <form class="form-add" role="form" method="post" action="loader.php">
+        <form class="form-add" role="form" method="post" action="loader.php?a=MenuController.Menu.updatePageData&id=1">
           <div class="box-body">
 
             <div class="form-group">
-              <label for="titleInput">Title</label>
-              <input type="text" name="name" class="form-control" id="titleInput" placeholder="title ...">
-            </div>
-
-            <div class="form-group">
               <label for="editor1">Description</label>
-              <textarea name="full_desc" id="editor1" rows="10" cols="80"></textarea>
+              <textarea name="text" id="editor1" rows="10" cols="80"></textarea>
             </div>
 
             <div class="callout callout-danger error-box" style="display:none"></div>
@@ -175,11 +170,14 @@
 
 <script src="views/AdminLTE-2.4.3/bower_components/ckeditor/ckeditor.js"></script>
 
+<script src="js/edit.js"></script>
+
 <script src="js/push.js"></script>
 
 <script>
   $(function () {
     CKEDITOR.replace('editor1')
+    getAbout();
   })
 </script>
 
