--- a/views/AdminLTE-2.4.3/pages/custom/edit_member.html
+++ b/views/AdminLTE-2.4.3/pages/custom/edit_member.html
@@ -187,7 +187,7 @@
 
             <div class="form-group">
               <label for="editor1">Description</label>
-              <textarea name="full_desc" id="editor1" rows="10" cols="80"></textarea>
+              <textarea name="description" id="editor1" rows="10" cols="80"></textarea>
             </div>
 
             <div class="radio">
