--- a/views/index.html
+++ b/views/index.html
@@ -145,8 +145,10 @@
         </div> -->
       </div>
 
-      <div class="goal text" id="tAbout">
-
+      <div class="goal text">
+        <h2>ჩვენს შესახებ</h2>
+        <div id="tAbout">
+        </div>
       </div>
     </section>
 
