--- a/views/AdminLTE-2.4.3/pages/custom/add_member.html
+++ b/views/AdminLTE-2.4.3/pages/custom/add_member.html
@@ -150,7 +150,7 @@
 
             <div class="form-group">
               <label for="editor1">Description</label>
-              <textarea name="full_desc" id="editor1" rows="10" cols="80"></textarea>
+              <textarea name="description" id="editor1" rows="10" cols="80"></textarea>
             </div>
 
             <div class="callout callout-danger error-box" style="display:none"></div>
